--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,6 @@
 body{
 /*	font-family: 'Arvo', serif;	*/
     font-family: 'MaruBuri', serif;
-	color:#6a6a6a;
 	font-size:15px;
 }
 
@@ -921,7 +920,6 @@ img.with-border{
 	height:100%; 
 	border-radius:0%; 
 	/*background-color: #fa7991; */
-	color:#666;
 	text-align:left; 
 	
 }
@@ -936,8 +934,6 @@ img.with-border{
 	font-size:20px;
 	font-family: 'EB Garamond', serif;
 	font-weight: 700;
-	color: #355e75;
-
 }
 
 .css-logo-text > i {
@@ -3178,7 +3174,7 @@ h2#dont-miss-it-title{
 /* ----------------------------------------------*/
 #more-events{
 	padding: 140px 0;
-	background-color: #eee6e6;
+	background-color: #f8f5f5;
 }
 
 #events-carousel .item{
