--- a/css/style.css
+++ b/css/style.css
@@ -310,12 +310,11 @@ img.with-border{
 
 /* Added */
 .title-en{
-	font-family: 'Noto Sans KR', sans-serif;
-	font-weight: 300;
+	font-family: 'MaruBuriExtraLight', serif;
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 0.3em;
-	color: #a8a8a8;
+	color: #bfa4a4;
 	opacity: 0.8;
 }
 
