--- a/css/style.css
+++ b/css/style.css
@@ -316,11 +316,11 @@ img.with-border{
 
 /* Added */
 .title-en{
-	font-family: 'MaruBuriExtraLight', serif;
+	font-family: 'MaruBuriLight', serif;
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 0.3em;
-	color: #bfa4a4;
+	color: #b79999;
 }
 
 .title-kr{
