--- a/css/magnific-popup/magnific-popup.css
+++ b/css/magnific-popup/magnific-popup.css
@@ -124,17 +124,18 @@ button::-moz-focus-inner {
   height: 44px;
   line-height: 44px;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 30px;
+  top: 25px;
   text-decoration: none;
   text-align: center;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
+  opacity: 0.75; 
+  filter: alpha(opacity=75);
   padding: 0 0 18px 10px;
   color: white;
   font-style: normal;
-  font-size: 28px;
-  font-family: Arial, Baskerville, monospace; }
+  font-size: 35px;
+  /* font-size: 28px; Original */
+  font-family: 'Noto Sans KR', sans-serif; }
   .mfp-close:hover, .mfp-close:focus {
     opacity: 1;
     filter: alpha(opacity=100); }
@@ -366,3 +367,27 @@ img.mfp-img {
   top: 0;
   right: 0;
   padding-top: 0; }
+
+@media screen and (max-width: 767px) {
+  .mfp-close{
+  font-size: 28px;
+  right: 15px;
+  top: 15px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mfp-close{
+    font-size: 25px;
+    right: 12px;
+    top: 12px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .mfp-close{
+    font-size: 20px;
+    right: 5px;
+    top: 5px;
+  }
+}
