nav font color change

--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ img.with-border{
 #nav-menu > li a{
 	display:inline-block;
 	padding:30px 17px; /* Nav Bar Edit */
-	color:#666;
+	color:#6a6a6a;
 	text-decoration:none;
 }
 
